--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -24,23 +24,16 @@ jobs:
         run: mvn dependency:resolve
 
       - name: Maven install
-        run: mvn install -Dmaven.javadoc.skip=true -B -V -e > output.txt
+        run: mvn install -Dmaven.javadoc.skip=true -B -V -e > maven-install-output.txt.txt
 
       - name: Print logs
         if: ${{ always() }}
         run: |
-          tail -n 500 target/it-tests/gwt-jar-test/build.log
-          tail -n 500 output.txt
+          tail -n 500 maven-install-output.txt.txt
 
       - uses: actions/upload-artifact@v4
         if: failure()
         with:
-          name: it-tests-gwt-jar-test.log
-          path: target/it-tests/gwt-jar-test/build.log
-
-      - uses: actions/upload-artifact@v4
-        if: failure()
-        with:
-          name: output.txt
-          path: output.txt
+          name: maven-install-output.txt.txt
+          path: maven-install-output.txt.txt
 
